# code-review-agent

./: .env.example  .gitignore  README.md  agent.py  config.toml  cron.json  deploy_orb.py  orb.toml  oss-repos.txt  poll_self.py  pyproject.toml  repos-test.txt  repos.txt  requirements.txt  runner.py  test_5users.py  test_stress.py
.github/workflows/: pr-review.yml
.venv312/: pyvenv.cfg
code_review_agent/: agent_runner.py  cli.py  github_client.py  orb_client.py  persistence.py  reviewer.py  standalone.py  web.py  web_standalone.py
code_review_agent/static/: index.html
dashboard/app/: page.tsx
dashboard/app/api/status/: route.ts
scripts/: deploy.py
src/: agent-prompt.md  agent.py  watchdog.sh
state-test/: agent-1.json
